--- a/style.css
+++ b/style.css
@@ -42,6 +42,17 @@ p{
     justify-content: space-evenly;
     align-items: center;
 }
+.btns select{
+    display: block;
+    background-color: #fab22e;
+    border: none;
+    padding: 5px;
+    font-size: 15px;
+    color: #171721;
+    border-radius: 5px;
+    cursor: pointer;
+    outline: none;
+}
 button{
     display: block;
     background-color: #fab22e;
@@ -51,7 +62,6 @@ button{
     color: #171721;
     font-weight: 600;
     padding: 12px 25px;
-    /* margin: 0 auto; */
     border-radius: 5px;
     cursor: pointer;
     outline: none;
