--- a/style.css
+++ b/style.css
@@ -7,17 +7,24 @@
 body{
     width: 100vw;
     height: 100vh;
-    background-color: #353027;
-    display: flex;
+    background-color: #11110f;
+    /* background-color: #292826; */
+    
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
 }
 .wrapper{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
     width: 50vw;
     padding: 50px 40px;
     background-color: #15161a;
     border-radius: 5px;
-    box-shadow: 20px 20px 40px rgba(97,63,0,0.4); 
+    box-shadow: 20px 20px 40px rgba(214, 167, 81, 0.1); 
+    /* color: rgb(216, 216, 216); */
 }
 span{
     display: block;
@@ -41,6 +48,8 @@ p{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    padding: auto;
+    /* transform: scale(.8);f */
 }
 .btns select{
     display: block;
@@ -57,12 +66,34 @@ button{
     display: block;
     background-color: #fab22e;
     border: none;
-    padding: 5px;
+    width: 33%;
+    height: 45px;
+    /* padding: 5px; */
     font-size: 18px;
     color: #171721;
     font-weight: 600;
-    padding: 12px 25px;
+    /* padding: 12px 25px; */
     border-radius: 5px;
     cursor: pointer;
     outline: none;
+    transition: all .1s ease-in-out;
+}
+select option{
+    color: white;
+}
+
+#btn:hover{
+  /* transform: scale(1.1);
+   */
+   /* w */
+   font-size: 18.5px;
+   background-color: #fab32ec0;
+
+}
+
+#likeButtonContainer{
+    width: 100px;
+    height: 100px;
+    color: white;
+    /* color: white; */
 }
